started styling post pages

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,7 @@
 ---
 import dayjs from 'dayjs';
+import { Image } from 'astro:assets'
+import NoahProfile from '../images/IMG_7710.jpg'
 const allPosts = await Astro.glob('../pages/posts/*.md');
 ---
 <html lang="en">
